Теперь все работает. Создал docker-compose и там внутри развернул redis

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -40,7 +40,7 @@
         <a style="color: white" href="{% url 'profile' %}" title="Login">Вход</a>
     </nav>
     <a href="https://scpfoundation.net">
-        <img src="{% static 'home/img/logo.png' %}" alt="SCP Foundation: Animal Blog" class="logo">
+        <img src="https://shop-images-bucket.hb.kz-ast.bizmrg.com/WhatsApp%20Image%202024-09-25%20at%2020.06.44-2.jpeg" alt="SCP Foundation: Animal Blog" class="logo">
     </a>
 </header>
 
